Switched from using "String.fromCharCode" to "String.fromCodePoint"

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 				</div>
 			</div>
 			<div id="browser" class="basic grid">
-				Can you see me?
+				<noscript>
+					Nothing works :D
+				</noscript>
 			</div>
 		</div>
 	</body>
